--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nuxt-quasar-ui": "^2.0.8",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
+    "vue-i18n": "^9.12.0",
     "vue-tsc": "^1.8.27"
   }
 }
