--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/i18n": "^8.3.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
@@ -34,7 +35,6 @@
     "nuxt-quasar-ui": "^2.0.8",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
-    "vue-i18n": "^9.12.0",
     "vue-tsc": "^1.8.27"
   }
 }
